Fix stretched imaghes on game and series pages

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -103,6 +103,14 @@ nav {
   border-radius: 8px;
 }
 
+
+@media (min-width: 768px) { 
+  .logoBox {
+    height: 100% !important;
+  }
+}
+
+
 a {
   color: unset;
   text-decoration: none;
